# MM32_CLion

./: .clang-format  .gitignore  CMakeLists.txt  Doxygen.cfg  README.md  README_CN.md  board_stlink.cfg  mm32f3277.ld
.github/workflows/: build.yml  cunit.yml  kicad.yml
circuit/: .gitignore  1_Power.kicad_sch  1_Power.sch  2_MCU.kicad_sch  2_MCU.sch  3_IMU.kicad_sch  3_IMU.sch  3_Sensor.sch  4_Connector.kicad_sch  4_Connector.sch  ADIS16470AMLZ.kicad_mod  Compass&Storage.kicad_sch  ControlMCU.kicad_sch  Debugger.kicad_sch  IMU.kicad_sch  LCD&GPS.kicad_sch  MM32_Periph.kicad_sym  MM32_Periph.lib  Miscellaneous.kicad_sch  Power.kicad_sch  ProcessMCU.kicad_sch  bom.ibom.kibot.yaml  default.kicad_wks  fp-lib-table  project-cache.lib  project-rescue.lib  project.kicad_pcb  project.kicad_pro  project.kicad_sch  project.pro  project.sch  sym-lib-table
circuit/MM32_Library.pretty/: ADIS16470AMLZ.kicad_mod  AMASS_XT30PW-F_1x02_P2.50mm_Horizontal.kicad_mod  AMASS_XT30PW-M_1x02_P2.50mm_Horizontal.kicad_mod  CP_Elec_6.3x7.7.kicad_mod  CP_InBoard_D8.0_P3.8_H9.kicad_mod  C_0603_1608Metric.kicad_mod  C_0805_2012Metric.kicad_mod  Crystal_SMD_3225-4Pin_3.2x2.5mm.kicad_mod  D_SOD-123.kicad_mod  Gernic_Debugger.kicad_mod  IPEX.kicad_mod  JST_GH_SM03B-GHS-TB_1x03-1MP_P1.25mm_Horizontal.kicad_mod  LED_0603_1608Metric.kicad_mod  LQFP-144_20x20mm_P0.5mm.kicad_mod  L_0805_2012Metric_Pad1.15x1.40mm_HandSolder.kicad_mod  L_10.4x10.4_H4.8.kicad_mod  L_Abracon_ASPI-0630LR.kicad_mod  PinHeader_1x03_P2.54mm_Horizontal.kicad_mod  QFN-16_3x3_Pitch0.5mm.kicad_mod  R_0603_1608Metric.kicad_mod  SIP-4_B0505S_1WR3.kicad_mod  SMA_Molex_73251-2200_Horizontal.kicad_mod  SOIC-16_3.9x9.9mm_P1.27mm.kicad_mod  SOT-23-5.kicad_mod  SOT-23-8.kicad_mod  SOT-23.kicad_mod  SW_SPST_CK_RS282G05A3.kicad_mod  TFT-LCD1.8inch.kicad_mod  TI_SO-PowerPAD-8.kicad_mod  TO-252-2.kicad_mod  TO-277B.kicad_mod  TSSOP-16_4.4x5mm_P0.65mm.kicad_mod  ublox_MAX.kicad_mod
circuit/bldc_driver/: Driver.kicad_sch  Library.kicad_sym  connector.kicad_sch  controller.kicad_sch  fp-lib-table  power.kicad_sch  project.kicad_pcb  project.kicad_pro  project.kicad_sch
circuit/control_board/: .gitignore  Compass&Storage.kicad_sch  ControlMCU.kicad_sch  Coprocessor.kicad_sch  Debugger.kicad_sch  Flash&USB.kicad_sch  IMU.kicad_sch  Integrated-circuit_storage.kicad_sym  LCD&GPS.kicad_sch  MM32_Periph.kicad_sym  Power.kicad_sch  ProcessMCU.kicad_sch  fp-lib-table  project.kicad_pcb  project.kicad_pro  project.kicad_sch  project.round-tracks-config  sym-lib-table
circuit/geomagnetometer/: .gitignore  fp-lib-table  geomagnetometer.kicad_pcb  geomagnetometer.kicad_pro  geomagnetometer.kicad_sch  sym-lib-table
circuit/gerber/: project-Bottom_Cu.gbr  project-Bottom_Mask.gbr  project-Bottom_Paste.gbr  project-Bottom_Silk.gbr  project-EdgeCuts.gbr  project-NPTH.drl  project-PTH.drl  project-Top_Cu.gbr  project-Top_Mask.gbr  project-Top_Paste.gbr  project-Top_Silk.gbr  project-inner1.gbr  project-inner2.gbr
circuit/power_board/: .gitignore  Connector.kicad_sch  (+8 more)
docs/: ibom.html  index.md
hardware/: led.c  led.h  uart.c  uart.h  uart_txrx_interrupt.c  uart_txrx_interrupt.h
math/: fft.c  fft.h  qfplib.h  verification.h
mechanical/: baterry_mount.STL  battery_mount.STEP  car_shell.stl  controlboard_mount.STL  encoder_mount.STEP  magnometer_mount.STL  motor_mount.SLDPRT  motor_mount.STEP
program/: .clang-format  CMakeLists.txt  Doxygen.cfg  MM32F3277.svd  board_daplink.cfg  gitversion.cmake  mm32f3277.ld
scripts/: filter_designer.py  getpip.py  lqr_control.py  requirements.txt  system_analyse.py  trajectory.txt
system/: delay.c  delay.h  mm32f3x_it.h  printf.h  startup_mm32f327.s  system.c  system.h  system_mm32f327x.c
testbench/: CMakeLists.txt  magfile.txt  main.c  main.h  solver_test.h  test.c  unit_test.c
testbench/gui/: mainform.c  mainform.h  simulate.c  simulate.h  simulate_line.c  simulate_line.h
testbench/riccati_solver/: main.c  riccati_solver.c  riccati_solver.h  ulapack.c  ulapack.h  ulapack_options.h  ulapack_type.h
testbench/script/: calibrate_test.c  calibrate_test.h  gps_test.c  gps_test.h  gps_text.c  gps_text.h  mdtp_test.c  mdtp_test.h  operations_test.c  operations_test.h  sensor_decode_test.c  sensor_decode_test.h  solver_test.c  solver_test.h  sort_test.c  sort_test.h  test_data.c  test_data.h  verification_test.c  verification_test.h
tools/: .gitignore  CMakeLists.txt  app_win32.rc  customplot.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serial.cpp
tools/form/: compass.cpp  compass.h  compass.ui  customplot.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serial.cpp
tools/pack/: .gitignore  configuration.iss
tools/protocol/: decrypt.cpp  joy_thread.cpp  joy_thread.h  joystick.cpp  joystick.h
tools/updater/: Downloader.cpp  Downloader.h  Downloader.ui  QSimpleUpdater.cpp  QSimpleUpdater.h  Updater.cpp  Updater.h
user/: config.h  main.c  main.h
(+347 files in other folders)
